<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".CoinDetailActivity">
    <ImageView
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/margin_16dp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/coin_image"
            android:id="@+id/ivCoinLogo"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"/>
    <TextView
            android:id="@+id/tvCoinType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16dp"
            android:textSize="@dimen/text_size_22sp"
            android:textColor="@color/black"
            android:text="@string/btc_eur"
            app:layout_constraintTop_toBottomOf="@id/ivCoinLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />
    <TextView
            android:id="@+id/tvCoinPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp"
            android:textSize="@dimen/text_size_22sp"
            android:textColor="@color/charcoal"
            android:text="@string/price_0"
            app:layout_constraintTop_toBottomOf="@id/tvCoinType"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />
    <TextView
            android:id="@+id/tvMinValuePerDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_22sp"
            android:layout_margin="@dimen/margin_8dp"
            android:textColor="@color/charcoal"
            android:text="@string/price_0"
            app:layout_constraintTop_toBottomOf="@id/tvCoinPrice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />
    <TextView
            android:id="@+id/tvMaxValuePerDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_22sp"
            android:layout_margin="@dimen/margin_8dp"
            android:textColor="@color/charcoal"
            android:text="@string/price_0"
            app:layout_constraintTop_toBottomOf="@id/tvMinValuePerDay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />
    <TextView
            android:id="@+id/tvLastDeal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_22sp"
            android:layout_margin="@dimen/margin_8dp"
            android:textColor="@color/charcoal"
            android:text="@string/price_0"
            app:layout_constraintTop_toBottomOf="@id/tvMaxValuePerDay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />
    <TextView
            android:id="@+id/tvLastUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_22sp"
            android:layout_margin="@dimen/margin_8dp"
            android:textColor="@color/charcoal"
            android:text="@string/price_0"
            app:layout_constraintTop_toBottomOf="@id/tvLastDeal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />
</androidx.constraintlayout.widget.ConstraintLayout>
